--- a/TestApplication-dev.yml
+++ b/TestApplication-dev.yml
@@ -10,8 +10,9 @@ management:
     web:
       exposure:
         include: '*'
-env: dev  
-
+env:
+ name: dev
+ 
 owner:
   name: dev killer
 hello:
